# wxRibbonGui

./: .gitignore  CMakeLists.txt  README.md  flatui.cpp  flatui.h
config/: PERFORMANCE_OPTIMIZATION_PLAN.md  config.ini
docs/: FLOAT_PANEL_README.md  FlatUIBar_Performance_Optimization_Guide.md  IMPLEMENTED_OPTIMIZATIONS.md  INTELLIGENT_LAYOUT_SYSTEM.md  PIN_CONTROL_IMPROVEMENTS.md  README.md  README_Themes.md  ScrollFunctionality_README.md
include/: FlatFrame.h  MainApplication.h  MainFrame.h
include/.cursor/rules/: nochineslog.mdc
include/config/: ConfigManager.h  ConstantsConfig.h  SvgIconManager.h  ThemeManager.h
include/flatui/: BorderlessFrameLogic.h  CustomDropDown.h  FlatFrame.h  FlatUIBar.h  FlatUIBarConfig.h  FlatUIBarLayoutManager.h  FlatUIBarPerformanceManager.h  FlatUIButtonBar.h  FlatUIConstants.h  FlatUIEventManager.h  FlatUIFixPanel.h  FlatUIFloatPanel.h  FlatUIFloatingWindow.h  FlatUIFrame.h  FlatUIFunctionSpace.h  FlatUIGallery.h  FlatUIHomeMenu.h  FlatUIHomeSpace.h  FlatUIPage.h  FlatUIPanel.h  FlatUIProfileSpace.h  FlatUISpacerControl.h  FlatUISystemButtons.h  FlatUITabDropdown.h  FlatUIUnpinButton.h  IFrameController.h
include/language/: LanguageManager.h
include/logger/: Logger.h
include/tests/config/: Coin3DConfigTest.cpp
src/: CmakeLists.txt  FlatFrame.cpp  MainApplication.cpp  MainFrame.cpp  resource.rc
src/config/: CmakeLists.txt  Coin3DConfig.cpp  ConfigManager.cpp  ConstantsConfig.cpp  LoggerConfig.cpp  SvgIconManager.cpp  ThemeManager.cpp
src/flatui/: BorderlessFrameLogic.cpp  CmakeLists.txt  CustomDropDown.cpp  FlatBarSpaceContainer.cpp  FlatFrame.cpp  FlatUIBar.cpp  FlatUIBarCore.cpp  FlatUIBarDrawing.cpp  FlatUIBarEventDispatcher.cpp  FlatUIBarLayoutManager.cpp  FlatUIBarPerformanceManager.cpp  FlatUIBarSpaceController.cpp  FlatUIBarSpaces.cpp  FlatUIBarStateManager.cpp  FlatUIBarTabs.cpp  FlatUIButtonBar.cpp  FlatUICustomControl.cpp  FlatUIEventManager.cpp  FlatUIFixPanel.cpp  FlatUIFloatPanel.cpp  FlatUIFloatingWindow.cpp  FlatUIFrame.cpp  FlatUIFunctionSpace.cpp  FlatUIGallery.cpp  FlatUIHomeMenu.cpp  FlatUIHomeSpace.cpp  FlatUIPage.cpp  FlatUIPageManager.cpp  FlatUIPanel.cpp  FlatUIPinButton.cpp  FlatUIPinControl.cpp  FlatUIProfileSpace.cpp  FlatUISpacerControl.cpp  FlatUISystemButtons.cpp  FlatUITabDropdown.cpp  FlatUIUnpinButton.cpp  FloatPanelDemo.cpp  UIHierarchyDebugger.cpp  flatui.cpp
src/language/: CmakeLists.txt  LanguageManager.cpp
src/logger/: CmakeLists.txt  Logger.cpp
